# MapReduce-Phase3

./: CMakeLists.txt  README.md
FileProcessor/: FileInputProcessor.cpp  FileProcessorMapOutput.cpp  FileProcessorRedOutput.cpp  FileProcessorShufOutput.cpp
Mapper/: MapperImpl.cpp
Reducer/: ReducerImpl.cpp
Shuffler/: ShufflerImpl.cpp
